--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
     "datejs": "^1.0.0-rc3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "image-downloader": "^3.4.1",
     "moment": "^2.22.2",
     "mongoose": "^5.1.6",
     "newsapi": "^2.2.2",
+    "nodemailer": "^4.6.7",
     "npm": "^6.1.0",
     "request": "^2.87.0",
     "sentiment": "^5.0.1",
